# pyTigerGraph

./: .gitignore  1.1_UDF_installer.ipynb  2.2_feature_engineering.ipynb  404.html  CHANGELOG.md  LICENSE  README.md  build.sh  index.html  pyproject.toml  setup.py  sitemap.xml  user_defined_query1.gsql
.github/: CODEOWNERS
.ipynb_checkpoints/: Featurizer-checkpoint.ipynb
Auth/: index.html
CONTRIBUTING/: index.html
DataFrame/: index.html
EdgeFunctions/: index.html
Functions/: index.html
GettingStarted/: index.html
Gsql/: index.html
OtherFunctions/: index.html
PathFunctions/: index.html
QueryFunctions/: index.html
SchemaFunctions/: index.html
TokenManagement/: index.html
VertexFunctions/: index.html
cicd/: send_comment.py
conda/: core_dev_env.yml  gds_dev_env.yml
examples/: README.md  graphLoader.ipynb  load_lastfm.gsql  load_lastfm_hetrec.gsql  pyTigerGraphCoreFunctions.ipynb  requirements.txt
license/: index.html
pyTigerGraph/: __init__.py  datasets.py  pyTigerGraph.py  pyTigerGraphAuth.py  pyTigerGraphBase.py  pyTigerGraphDataset.py  pyTigerGraphEdge.py  pyTigerGraphException.py  pyTigerGraphGSQL.py  pyTigerGraphLoading.py  pyTigerGraphPath.py  pyTigerGraphQuery.py  pyTigerGraphSchema.py  pyTigerGraphUDT.py  pyTigerGraphUtils.py  pyTigerGraphVertex.py  schema.py  visualization.py
tests/: ExprUtil.hpp  README.md  pyTigerGraphUnitTest.py  pyTigerGraphUnitTestAsync.py  test_OGM.py  test_OGMAsync.py  test_async.py  test_common_base.py  test_common_edge_query.py  test_common_gsql_helpers.py  test_common_query_helpers.py  test_datasets.py  test_jwt.py  (+45 more)
(+560 files in other folders)
